Archive2/ff/e72ece096e2406/output
main.cpp:7:9: error: use of undeclared identifier 'throw_custom_null_pointer_error'
        throw_custom_null_pointer_error();
        ^
main.cpp:9:12: error: expected expression
    return ????; //what do you suggest goes here?
           ^
main.cpp:9:13: error: expected expression
    return ????; //what do you suggest goes here?
            ^
main.cpp:9:14: error: expected expression
    return ????; //what do you suggest goes here?
             ^
main.cpp:9:15: error: expected expression
    return ????; //what do you suggest goes here?
              ^
main.cpp:9:16: error: expected expression
    return ????; //what do you suggest goes here?
               ^
main.cpp:9:16: error: expected ':'
    return ????; //what do you suggest goes here?
               ^
               : 
main.cpp:9:15: note: to match this '?'
    return ????; //what do you suggest goes here?
              ^
main.cpp:9:16: error: expected expression
    return ????; //what do you suggest goes here?
               ^
main.cpp:9:16: error: expected ':'
    return ????; //what do you suggest goes here?
               ^
               : 
main.cpp:9:14: note: to match this '?'
    return ????; //what do you suggest goes here?
             ^
main.cpp:9:16: error: expected expression
    return ????; //what do you suggest goes here?
               ^
main.cpp:9:16: error: expected ':'
    return ????; //what do you suggest goes here?
               ^
               : 
main.cpp:9:13: note: to match this '?'
    return ????; //what do you suggest goes here?
            ^
main.cpp:9:16: error: expected expression
    return ????; //what do you suggest goes here?
               ^
main.cpp:9:16: error: expected ':'
    return ????; //what do you suggest goes here?
               ^
               : 
main.cpp:9:12: note: to match this '?'
    return ????; //what do you suggest goes here?
           ^
main.cpp:9:16: error: expected expression
    return ????; //what do you suggest goes here?
               ^
14 errors generated.
