Archive2/ff/e72ece096e2406/main.cpp

template<class T>
T& dereference(T* ptr) {
    if (ptr)
        return *ptr;
    else
        throw_custom_null_pointer_error();
        
    return ????; //what do you suggest goes here?
}